# MuonSpectrumCUDA

./: CMakeLists.txt  README.md
includes/: matrixelements.h
src/: BSM-Cuda.cu  legendre_rule.cpp  matrixelements.cu
